--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <hr>
+    <h1>Clarusway Survey Form</h1>
+    <p>Thank you for taking the time to help us improve the platform</p>
+    <label for="isim">Name</label>
+    <br><br>
+    <input type="text" name="isim" id="isim">
+    <br>
+    <label for="soyisim">Surname</label>
+    <br><br>
+    <input type="text" name="soyisim" id="soyisim" placeholder="Enter your Surname">
+    <br>
+    <label for="mail">Email</label>
+    <br><br>
+    <input type="email" name="mail" id="mail" placeholder="user@clarusway.com">
     
+
+
+
+
 </body>
 </html>
