--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 </head>
 <body>
     <form action="result.html" method="get">
-        <hr>
         <h1>Clarusway Survey Form</h1>
-        <p>Thank you for taking the time to help us improve the platform</p>
-        <label for="isim">Name</label>
-        <br><br>
-        <input type="text" name="isim" id="isim" placeholder="Enter your name">
-        <br>
-        <label for="soyisim">Surname</label>
-        <br><br>
-        <input type="text" name="soyisim" id="soyisim" placeholder="Enter your Surname">
-        <br>
-        <label for="mail">Email</label>
-        <br><br>
-        <input type="email" name="mail" id="mail" placeholder="user@clarusway.com">
+        <div>
+            <p>Thank you for taking the time to help us improve the platform</p>
+            <label for="isim">Name</label>
+            <br><br>
+            <input type="text" name="isim" id="isim" placeholder="Enter your name">
+            <br>
+            <label for="soyisim">Surname</label>
+            <br><br>
+            <input type="text" name="soyisim" id="soyisim" placeholder="Enter your Surname">
+            <br>
+            <label for="mail">Email</label>
+            <br><br>
+            <input type="email" name="mail" id="mail" placeholder="user@clarusway.com">
+        </div>
         <p>Which option best describes your current role?</p>
         <select name="rol" id="rol">,
             <option disabled selected value>Select current role</option>
